chore: lots more ast nodes